--- a/DisplayHDRComplianceTests.vcxproj
+++ b/DisplayHDRComplianceTests.vcxproj
@@ -22,7 +22,7 @@
     <RootNamespace>HighBitDepthFSE</RootNamespace>
     <ProjectGuid>{FBA0D8AC-858A-415C-BB25-C26B88C2BD83}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -310,6 +310,7 @@
     <ClInclude Include="DeviceResources.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SineSweepEffect.h" />
     <ClInclude Include="StepTimer.h" />
     <ClInclude Include="ToneSpikeEffect.h" />
@@ -332,8 +333,8 @@
     <ResourceCompile Include="resource.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="appicon.ico" />
     <Image Include="CalibriBoth96Dpi.png" />
-    <Image Include="directx.ico" />
     <Image Include="OnePixelLines1200x700.png" />
   </ItemGroup>
   <ItemGroup>
